# modal_doc_parsing_vlm

./: .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  configuration.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  EntityPanel.test.tsx  EntityPanel.tsx  main.tsx  styles.css  test-setup.ts
scripts/: build_frontend.sh  safe_modal_smoke.sh
src/modal_doc_parsing_vlm/: __init__.py  aggregator.py  chunking.py  cleanup.py  config.py  engine.py  engine_extraction.py  engine_ocr.py  extraction_client.py  fallback_policy.py  json_output.py  mcp_server.py  model_cache.py  orchestrator.py  page_router.py  prompts.py  prompts_extraction.py  rasterize.py  source_ingest.py  storage.py  types_api.py  types_extraction.py  types_result.py  web_api.py
tests/: test_aggregation.py  test_api_models.py  test_app_exports.py  test_app_extraction_reuse.py  test_chunking.py  test_cleanup.py  test_config_runtime.py  test_engine_extraction.py  test_engine_ocr_markdown.py  test_extraction_client.py  test_extraction_prompts.py  test_extraction_types.py  test_fallback_policy.py  test_json_output.py  test_mcp_server.py  test_model_cache.py  test_orchestrator.py  test_page_router.py  test_storage.py  test_web_api.py
tests/integration/: test_modal_smoke.py
tmp/: pmc1378958.html
tmp/inspect-job-f663/: raw_output_page6.txt  result.json
tmp/job-results/01640f156d57417b82b3f5776b7aefd7/: artifact_paths.json  document.md  document.txt  document_parse_result.json  result_envelope.json
(+65 files in other folders)
