[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modal-doc-parsing-vlm"
version = "0.1.0"
description = "Core Modal VLM document parsing backend scaffold."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.121.1",
  "fastmcp==2.13.1",
  "httpx==0.28.1",
  "json-repair==0.54.1",
  "modal==1.3.4",
  "pillow==12.0.0",
  "python-multipart==0.0.20",
  "pydantic==2.12.4",
  "pymupdf==1.26.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
